syntax = "proto3";
import "google/api/annotations.proto";
option csharp_namespace = "File.Application";

package file;

service FileService {
	rpc Upload(FileUploadRequest) returns (FileUploadResponse) {
		option (google.api.http) = {
            post: "/v1/file"
            body: "*"
        };

	};

    rpc Download(FileDownloadRequest) returns (FileDownloadResponse) {
		option (google.api.http) = {
            get: "/v1/file"
        };
	};
}

message MetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}

message FileUploadRequest {
    MetaData metadata = 1;
    File file = 2;
}

message FileUploadResponse {
  string name = 1;
}

message FileDownloadRequest {
    MetaData metadata = 1;
}

message FileDownloadResponse {
  File file = 1;
}